--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native-stack": "^6.2.4",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
+    "firebase": "^9.1.3",
     "native-base": "^3.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
