--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^2.4.0",
+    "@m3o/m3o-node": "^0.0.26",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.4",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "m3o": "^1.0.799",
     "native-base": "^3.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -24,7 +26,8 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
