--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.4",
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
+    "expo": "^46.0.9",
+    "expo-status-bar": "~1.4.0",
+    "firebase": "^8.10.1",
     "m3o": "^1.0.799",
     "native-base": "^3.2.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "~0.13.12",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.4",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "^0.18.8",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
     "url": "^0.11.0"
